fixes bug 224240 "nsURIChecker cleanup" r=biesi sr=bzbarsky